<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity"
    android:background="@color/colorGris">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/linearLayoutContentEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-90dp"
        app:srcCompat="@drawable/ic_icon_chicken" />

    <LinearLayout
        android:id="@+id/linearLayoutContentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="91dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSingIn"
            style="@style/Titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/singIn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumEmpleadoLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/numero_empleado"
            app:endIconMode="clear_text"
            app:startIconCheckable="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumEmpLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEntrar"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/darker_gray"
            android:elevation="10dp"
            android:enabled="false"
            android:text="@string/entrar"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cornerRadius="@dimen/radius_all_buttons"
            app:rippleColor="@color/colorGray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:elevation="10dp"
            android:fontFamily="@font/alef_bold"
            android:singleLine="true"
            android:text="@string/registro"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPassOlvidado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:fontFamily="@font/alef_bold"
            android:singleLine="true"
            android:text="@string/pass_olvidado"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>