<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.registro.RegistroActivity"
    android:background="@color/colorGris">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sing_up"
            style="@style/Titles"/>

        <ImageView
            android:id="@+id/imageViewRegistro"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:elevation="4dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_add_photo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tiet_RegNom"
            app:endIconMode="clear_text"
            app:startIconCheckable="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_RegNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ áéíóú ÁÉÍÓÚ"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:hint="@string/tiet_RegApPaterno"
            app:endIconMode="clear_text"
            app:startIconCheckable="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_RegApPaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ áéíóú ÁÉÍÓÚ"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:hint="@string/tiet_RegApMaterno"
            app:endIconMode="clear_text"
            app:startIconCheckable="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_RegApMaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ áéíóú ÁÉÍÓÚ"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTelefonoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tiet_RegTelefono"
            app:endIconMode="clear_text"
            app:startIconCheckable="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_RegTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:drawablePadding="10dp"
                android:digits="0123456789"
                android:maxLength="10"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumEmpRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tiet_RegNumEmpleado"
            app:endIconMode="clear_text"
            app:startIconCheckable="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_RegNumEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:drawableLeft="@drawable/ic_assignment"
                android:drawablePadding="10dp"
                android:digits="0123456789"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tiet_RegCorreo"
            app:endIconMode="clear_text"
            app:startIconCheckable="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_RegCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:inputType="textWebEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tillFechaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tiet_RegFechaNac"
            app:endIconMode="clear_text"
            app:startIconCheckable="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/tiet_RegFechaNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_event_black_24dp"
                android:drawablePadding="10dp"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tiet_RegPass"
            app:endIconMode="password_toggle"
            app:startIconCheckable="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_RegPass"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                app:endIconMode="password_toggle" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassRegistroConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_edit_text_24_dp"
            android:layout_marginRight="@dimen/margin_edit_text_24_dp"
            android:layout_marginBottom="@dimen/margin_edit_text_24_dp"
            android:hint="@string/tiet_RegConfirmPass"
            app:endIconMode="password_toggle"
            app:startIconCheckable="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_RegConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="10dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registrar"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/darker_gray"
            android:elevation="10dp"
            android:enabled="false"
            android:text="@string/registro"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cornerRadius="@dimen/radius_all_buttons"
            app:rippleColor="@color/colorGray" />


    </LinearLayout>
</ScrollView>