<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.perfil.PerfilFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fotoPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_user" />


                    <TextView
                        android:id="@+id/txtNombrePerfil"
                        style="@style/TextTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/txtNumEmpPerfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12dp"
                        style="@style/TextTheme"
                        android:layout_gravity="center" />


                    <CalendarView
                        android:id="@+id/calendarPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_calendar" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="12dp"
                android:elevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:elevation="12dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_alert_asistencia"
                        android:gravity="center"
                        android:layout_marginBottom="8dp"
                        android:textSize="18dp"/>

                    <TextView
                        android:id="@+id/txtFechaAsistencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:layout_marginLeft="12dp"
                        android:drawableLeft="@drawable/ic_event_black_24dp"
                        android:text="@string/sin_fecha_asistencia"
                        android:textSize="18dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/txtHoraAsistencia"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="12dp"
                            android:drawablePadding="10dp"
                            android:text="@string/sin_hora_asistencia"
                            android:textSize="18dp"
                            android:drawableLeft="@drawable/ic_clock"
                            />
                        <TextView
                            android:id="@+id/txtMensajeHora"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="12dp"
                            android:drawablePadding="10dp"
                            android:textSize="18dp"
                            android:textColor="@android:color/holo_red_dark"
                            />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/txtDescAsistencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:text="@string/message_alert_not_asistencia"
                         />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFloatingCamera"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_camera"
        app:tint="@android:color/white" />

</RelativeLayout>